@@ -1,4 +1,4 @@
-# This Build.PL for Catmandu-OAI was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.015.
+# This Build.PL for Catmandu-OAI was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.014.
 use strict;
 use warnings;
 
