@@ -4,7 +4,7 @@
       "Nicolas Steenlant, C<< <nicolas.steenlant at ugent.be> >>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Milla version v1.0.17, Dist::Zilla version 6.008, CPAN::Meta::Converter version 2.150005",
+   "generated_by" : "Dist::Zilla version 5.047, Dist::Milla version v1.0.15, CPAN::Meta::Converter version 2.150001",
    "license" : [
       "perl_5"
    ],
@@ -43,7 +43,7 @@
       },
       "develop" : {
          "requires" : {
-            "Dist::Milla" : "v1.0.17",
+            "Dist::Milla" : "v1.0.15",
             "Test::Pod" : "1.41"
          }
       },
@@ -86,12 +86,12 @@
       "Christian Pietsch <christian.pietsch@uni-bielefeld.de>",
       "Jakob Voss <voss@gbv.de>",
       "Matthias Vandermaesen <matthias@colada.be>",
-      "Nicolas Franck <Nicolas.Franck@ugent.be>",
+      "Nicolas Franck <nicolas.franck@ugent.be>",
       "Nicolas Franck <njfranck@ca20c533.ugent.be>",
       "Nicolas Steenlant <nicolas.steenlant@ugent.be>",
       "Patrick Hochstenbach <Patrick.Hochstenbach@UGent.be>",
+      "Patrick Hochstenbach <patrick.hochstenbach@ugent.be>",
       "Yanick Champoux <yanick@babyl.dyndns.org>"
-   ],
-   "x_serialization_backend" : "Cpanel::JSON::XS version 3.023"
+   ]
 }
 
