@@ -21,7 +21,9 @@ has from                   => (is => 'ro');
 has until                  => (is => 'ro');
 has resumptionToken        => (is => 'ro');
 
+has identify               => (is => 'ro');
 has listIdentifiers        => (is => 'ro');
+has listRecords            => (is => 'ro');
 has listSets               => (is => 'ro');
 has listMetadataFormats    => (is => 'ro');
 has getRecord              => (is => 'ro');
@@ -161,6 +163,30 @@ sub _map_format {
     };
 }
 
+sub _map_identify {
+    my ($self, $rec) = @_;
+
+    my @description;
+
+    if ($rec->description) {
+      for my $desc ($rec->description) {
+         push @description , $desc->dom->toString;
+      }
+    }
+
+    +{
+        _id => $rec->baseURL,
+        baseURL            => $rec->baseURL,
+        granularity        => $rec->granularity,
+        deletedRecord      => $rec->deletedRecord,
+        earliestDatestamp  => $rec->earliestDatestamp,
+        adminEmail         => $rec->adminEmail,
+        protocolVersion    => $rec->protocolVersion,
+        repositoryName     => $rec->repositoryName,
+        description        => \@description
+    };
+}
+
 
 sub _map_record {
     my ($self, $rec) = @_;
@@ -227,7 +253,10 @@ sub _args {
 sub _verb {
     my $self = $_[0];
 
-    if ($self->listIdentifiers) {
+    if ($self->identify) {
+        return 'Identify';
+    }
+    elsif ($self->listIdentifiers) {
         return 'ListIdentifiers';
     }
     elsif ($self->listSets) {
@@ -238,6 +267,9 @@ sub _verb {
     }
     elsif ($self->listMetadataFormats) {
         return 'ListMetadataFormats';
+    }
+    elsif ($self->listRecords) {
+        return 'ListRecords';
     }
     else {
         return 'ListRecords';
@@ -459,10 +491,40 @@ sub _list_metadata_formats {
     };
 }
 
+sub _identify {
+    my $self = $_[0];
+    sub {
+        state $stack = [];
+        state $done  = 0;
+
+        my $fill_stack = sub {
+            push @$stack , shift;
+        };
+
+        if (@$stack <= 1 && $done == 0) {
+            my $sub  = sub { $self->oai->Identify( onRecord => $fill_stack) };
+            my $res  = $self->_retry( $sub );
+
+            $fill_stack->($res);
+
+            $done = 1;
+        }
+
+        if (my $rec = shift @$stack) {
+            return $self->_map_identify($rec);
+        }
+
+        return undef;
+    };
+}
+
 sub oai_run {
     my ($self) = @_;
 
-    if ($self->listIdentifiers) {
+    if ($self->identify) {
+        return $self->_identify;
+    }
+    elsif ($self->listIdentifiers) {
         return $self->_list_records;
     }
     elsif ($self->listSets) {
@@ -473,6 +535,9 @@ sub oai_run {
     }
     elsif ($self->listMetadataFormats) {
         return $self->_list_metadata_formats;
+    }
+    elsif ($self->listRecords) {
+        return $self->_list_records
     }
     else {
         return $self->_list_records
@@ -499,6 +564,9 @@ Catmandu::Importer::OAI - Package that imports OAI-PMH feeds
     # Harvest records
     $ catmandu convert OAI --url http://myrepo.org/oai
     $ catmandu convert OAI --url http://myrepo.org/oai --metadataPrefix didl --handler raw
+
+    # Harvest repository description
+    $ catmandu convert OAI --url http://myrepo.org/oai --identify 1
 
     # Harvest identifiers
     $ catmandu convert OAI --url http://myrepo.org/oai --listIdentifiers 1
@@ -564,17 +632,25 @@ for datestamp-based selective harvesting.
 An optional datetime value (YYYY-MM-DD or YYYY-MM-DDThh:mm:ssZ) as upper bound
 for datestamp-based selective harvesting.
 
+=item identify
+
+Harvest the repository description instead of all records.
+
 =item getRecord
 
-Harvest one record instead of all records
+Harvest one record instead of all records.
 
 =item listIdentifiers
 
 Harvest identifiers instead of full records.
 
+=item listRecords
+
+Harvest full records. Default operation.
+
 =item listSets
 
-Harvest sets instead of records
+Harvest sets instead of records.
 
 =item listMetadataFormats
 
